# Doomsday

./: .clang-format  .gitignore  CMakeLists.txt  Doomsday  README.md  clang-tidy-log.txt  imgui.ini  run_format.py
configuration/: root_directory.h
include/: BoundingBox.h  Cube.h  Game.h  LightCube.h  LightStructs.h  ModelObject.h  MoveableObject.h  RectangleObject.h  Room.h  common.h  crosshair.h  stb_image.h
include/learnopengl/: camera.h  filesystem.h  mesh.h  model.h  shader.h  shader_m.h  shader_s.h
include/rg/: Camera.h  Error.h  Shader.h  Texture2D.h  mesh.h  model.h
libs/glad/include/KHR/: khrplatform.h
libs/glad/include/glad/: glad.h
libs/imgui/include/: imconfig.h  imgui.h  imgui_impl_glfw.h  imgui_impl_opengl3.h  imgui_internal.h  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
libs/imgui/src/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_tables.cpp  imgui_widgets.cpp
resources/: program_state.txt
resources/objects/Forklift/: Forklift.dae  Forklift.mtl  Forklift_D.tga  Forklift_N.tga  Forklift_S.tga
resources/objects/Model_C0811038/: M4.mtl  M4_Bump.tga  M4_Normal.tga
resources/objects/Model_C0811054/: AR Bullet.FBX  AR Bullet.mtl
resources/objects/Model_D0306021/: D0306021.mtl  y_tex_body.tga  y_tex_eyes2.tga  y_tex_kami1.tga  y_tex_kami2.tga  y_tex_kami3.tga  y_tex_kao.tga  y_tex_r.tga
resources/objects/Model_D0307021/: D0307021.mb  zeph_df_01body.tga  zeph_op_01body.tga  zeph_op_02hair.tga  zeph_sp_02hair.tga
resources/objects/Zombie Pack/: zombie_normal.mtl
resources/shaders/: lightCubeShader.fs  lightCubeShader.vs  rectangleObjectShader.fs  rectangleObjectShader.vs
src/: BoundingBox.cpp  Game.cpp  MoveableObject.cpp  main.cpp
